Adoc documentation for Lithium.
Signed-off-by: ananthip <ananthip@hcl.com>
Change-Id: Ifd48a56fbc1fadf7ac8b32d969ca1d406f763053

--- a/manuals/getting-started-guide/src/main/asciidoc/vtn/vtn-install.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/vtn/vtn-install.adoc
@@ -35,6 +35,9 @@ Follow the instructions in <<_getting_and_installing_opendaylight_lithium,Gettin
 * Arrange a physical/virtual server with any one of the supported 64-bit OS environment.
 ** RHEL 6 / 7 
 ** CentOS 6 / 7
+** Fedora 20 / 21 / 22
+** Ubuntu 14.04
+
 * Install these packages
 
   yum install perl-Digest-SHA uuid libxslt libcurl unixODBC json-c
