--- a/manuals/howto-openstack/src/main/asciidoc/openstack-vtn.adoc
+++ b/manuals/howto-openstack/src/main/asciidoc/openstack-vtn.adoc
@@ -1,4 +1,4 @@
-=== OpenStack Support Developer Guide
+=== OpenStack with Virtual Tenant Network
 The implementation  describes ODL controller with VTN manager  feature provides the  network service for OpenStack. VTN manager utilizes the OVSDB southbound service and the neutron for this implementation.The below diagram depicts the communication of ODL Controller and two virtual network connected by a OpenFlow switch using this implementation.
 
 .OpenStack Architecture
