Bug-3920: Fixed wrong namespace for ipv4routes tag
Change-Id: Id89e1a29b01ea50bb8121835cc7fc7f8b5e6eff3
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/manuals/user-guide/src/main/asciidoc/bgpcep/odl-bgpcep-bgp-all-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bgpcep/odl-bgpcep-bgp-all-user.adoc
@@ -498,7 +498,7 @@ If your peer is configured, you can populate the RIB by making following POST ca
 [source,xml]
 ----
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<ipv4-routes xmlns="urn:opendaylight:params:xml:ns:yang:bgp-rib">
+<ipv4-routes xmlns="urn:opendaylight:params:xml:ns:yang:bgp-inet">
  <ipv4-route>
   <prefix>200.20.160.1/32</prefix>
   <attributes>
