--- a/manuals/user-guide/src/main/asciidoc/vtn/VTN_OpenStack_Support-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/vtn/VTN_OpenStack_Support-user.adoc
@@ -7,7 +7,7 @@ While OpenDaylight Controller provides several ways to integrate with OpenStack,
 VTN Manager features, enable OpenStack to work in pure OpenFlow environment in which all switches in data plane are OpenFlow switch.
 
 ==== Requirements
-To use OpenDaylight Controller (ODL) as Network Service Provider for Openstack.
+To use OpenDaylight as Network Service Provider for OpenStack.
 
 ==== Components
 * OpenDaylight Controller.
@@ -51,7 +51,7 @@ TIP: Please do minimal Install to avoid any issues in devstack bringup
 
 *Network Settings*
 - Checked the output of ifconfig -a, two interfaces were listed eth0 and eth1 as indicated in the image above.
-- We had connected eth0 interface to the Network where ODL Controller is reachable.
+- We had connected eth0 interface to the Network where OpenDaylight is reachable.
 - eth1 interface in both servers were connected to a different network to act as data plane for the VM's created using the OpenStack.
 - Manually edited the file : sudo vim /etc/network/interfaces and made entries as follows
 
@@ -81,7 +81,7 @@ NOTE: The entries for eth1 are not mandatory, If not set, we may have to manuall
 - reboot both nodes after the user and network settings to have the network settings applied to the network
 - Login again and check the output of ifconfig to ensure that both interfaces are listed
 
-====  ODL Settings and Execution
+====  OpenDaylight Settings and Execution
 =====  vtn.ini
  * VTN uses the configuration parameters from  'vtn.ini' file for the OpenStack integration.
  * These values will be set for the OpenvSwitch, in all the participating OpenStack nodes.
@@ -111,21 +111,20 @@ failmode=secure
  *** The value can be "standalone" or "secure".
  *** Please use "secure" for general use cases.
 
-====  Start ODL Controller
+====  Start OpenDaylight
 
  * Please install the feature *odl-vtn-manager-neutron* that provides the integration with Neutron interface.
 
-  install odl-vtn-manager-neutron
+feature:install odl-vtn-manager-neutron
 
-TIP: After running ODL Controller, please ensure ODL Controller listens to the ports:6633,6653, 6640 and 8080
+TIP: After running OpenDaylight, please ensure OpenDaylight listens to the ports:6633,6653, 6640 and 8080
 
-TIP: Please allow the ports in firewall for the devstack to be able to communicate with ODL Controller.
+TIP: Please allow the ports in firewall for the devstack to be able to communicate with OpenDaylight.
 
-NOTE: 6633/6653 - OpenFlow Ports
-
-NOTE: 6640 - OVS Manager Port
-
-NOTE: 8282 - Port for REST API
+NOTE:
+* 6633/6653 - OpenFlow Ports
+* 6640 - Open vSwitch Manager Port
+* 8282 - Port for REST API
 
 ====  Devstack Setup
 
@@ -295,14 +294,14 @@ git checkout stable/juno
 * Execute the command 'sudo ovs-vsctl show' in the control node terminal and verify if the bridge 'br-int'  is created.
 * The output of the ovs-vsctl show will be similar to the one seen in control node.
 ===== Additional Verifications
-* Please visit the ODL DLUX GUI after stacking all the nodes, http://<ODL_IP_ADDRESS>:8181/dlux/index.html. The switches, topology and the ports that are currently read can be validated.
+* Please visit the OpenDaylight DLUX GUI after stacking all the nodes, http://<ODL_IP_ADDRESS>:8181/dlux/index.html. The switches, topology and the ports that are currently read can be validated.
 
-TIP: If the interconnected between the OVS is not seen, Please bring up the interface for the dataplane manually using the below comamnd
+TIP: If the interconnected between the Open vSwitch is not seen, Please bring up the interface for the dataplane manually using the below comamnd
 
 
   ifup <interface_name>
 
-TIP: Some versions of OVS, drop packets when there is a table-miss, So please add the below flow to all the nodes with OVS version (>=2.1)
+TIP: Some versions of Open vSwitch, drop packets when there is a table-miss, So please add the below flow to all the nodes with Open vSwitch version (>=2.1)
 
 
   ovs-ofctl --protocols=OpenFlow13 add-flow br-int priority=0,actions=output:CONTROLLER
@@ -378,53 +377,13 @@ image::vtn/Instance_Console.png[Instance Console,width=600]
 .Ping
 image::vtn/Instance_ping.png[Ping,width=600]
 
-
 ===== Verification of Control and Compute Node after VM creation
-The output of sudo ovs-vsctl command after VM creation
-[source]
-  [stack@icehouse-compute-odl devstack]$ sudo ovs-vsctl show  Manager "tcp:192.168.64.73:6640"
-  is_connected: true
-  Bridge br-int
-  Controller "tcp:192.168.64.73:6633"
-  is_connected: true
-  fail_mode: secure
-  Port "tapa2e1ef67-79"
-  Interface "tapa2e1ef67-79"
-  Port "tap5f34d39d-5e"
-  Interface "tap5f34d39d-5e"
-  Port "tapc2858395-f9"
-  Interface "tapc2858395-f9"
-  Port "tapa9ea900a-4b"
-  Interface "tapa9ea900a-4b"
-  Port "tapc63ef3de-53"
-  Interface "tapc63ef3de-53"
-  Port "tap01d51478-8b"
-  Interface "tap01d51478-8b"
-  Port "tapa0b085ab-ce"
-  Interface "tapa0b085ab-ce"
-   Port "tapeab380de-8f"
-  Interface "tapeab380de-8f"
-  Port "tape404538c-0a"
-  Interface "tape404538c-0a"
-  Port "tap2940658d-15"
-  Interface "tap2940658d-15"
-  Port "ens224"
-  Interface "ens224"
-  ovs_version: "2.3.0"
-  <code>[stack@icehouse-controller-odl devstack]$ sudo ovs-vsctl show
-  Manager "tcp:192.168.64.73:6640"
-  is_connected: true
-  Bridge br-int
-  Controller "tcp:192.168.64.73:6633"
-  is_connected: true
-  fail_mode: secure
-  Port "tap71790d18-65"
-  Interface "tap71790d18-65"
-  Port "ens224"
-  Interface "ens224"
-  ovs_version: "2.3.0"
+* Every time a new VM is created, more interfaces are added to the br-int bridge in Open vSwitch.
+* Use *sudo ovs-vsctl show* to list the number of interfaces added.
+* Please visit the DLUX GUI to list the new nodes in every switch.
 
-NOTE:In the above scenario more nodes have been created in the compute node
+==== Using the DLUX GUI
+For more information see <<_using_the_opendaylight_user_interface_dlux,the chapter on DLUX>> above.
 
 ===== References
 * http://devstack.org/guides/multinode-lab.html
