Update VTN SCVMM Support to user guide.
   + Added SCVMM in userguide how to.
   - Removed VTN_OpenStack_Support-user from User Guide.

Signed-off-by: ananthip <ananthip@hcl.com>
Change-Id: I92d3e314a9105e7e2b644338341387096fcd192b

--- a/manuals/user-guide/src/main/asciidoc/vtn/vtn-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/vtn/vtn-user.adoc
@@ -21,3 +21,5 @@ include::VTN_How_To_configure_flow_filters.adoc[How To Configure Flow Filters Us
 include::VTN_How_To_Use_VTN_to_make_packets_take_different_paths.adoc[Change Traffic Path]
 
 include::VTN_How_To_Troubleshoot_Coordinator_Installation.adoc[Troubleshoot VTN Coordinator]
+
+include::VTN_How_To_Support_for_Microsoft_SCVMM.adoc[Support for Microsoft SCVMM 2012 R2 with ODL VTN]
