Adocs created for vtn SCVMM.    + Added SCVMM in userguide    + Added Dlux UI in userguide
Signed-off-by: ananthip <ananthip@hcl.com>
Change-Id: I92d3e314a9105e7e2b644338341387096fcd192b

--- a/manuals/user-guide/src/main/asciidoc/vtn/vtn-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/vtn/vtn-user.adoc
@@ -4,6 +4,8 @@ include::VTN_Overview.adoc[VTN Overview]
 
 include::VTN_OpenStack_Support-user.adoc[VTN OpenStack Configuration]
 
+include::VTN_Support_for_Microsoft_SCVMM-user.adoc[Support for Microsoft SCVMM 2012 R2 with ODL VTN]
+
 === VTN Usage Examples
 
 include::VTN_How_To_configure_L2_Network_with_Single_Controller.adoc[How to configure L2 Network with Single Controller]
