Adding the persistence developer and user guide
Change-Id: I1fcc55101cd856e60a8d34c95a3c24931e305f99
Signed-off-by: My Trinh <mydung.thi.trinh@hp.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -111,6 +111,11 @@ include::usc/odl-usc-channel-dev.adoc[]
 
 include::vtn/vtn-dev.adoc[]
 
+include::persistence/api-dev.adoc[]
+
+include::persistence/jpa-dev.adoc[]
+
+
 :numbered!:
 
 ///////
