Bug-3780: Fixed BGP user guide
BGP peer RESTCONF example was refering to wrong rib service type

Change-Id: If00d8898f25db8e3abf39a12f2eb0cbad2ba6017
Signed-off-by: Milos Fabian <milfabia@cisco.com>

--- a/manuals/user-guide/src/main/asciidoc/bgpcep/odl-bgpcep-bgp-all-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bgpcep/odl-bgpcep-bgp-all-user.adoc
@@ -67,7 +67,7 @@ uncomment the module containing bgp-peer.
  <holdtimer>180</holdtimer>
  <peer-role>ibgp</peer-role>
  <rib>
-  <type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:cfg">prefix:rib</type>
+  <type xmlns:prefix="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">prefix:rib-instance</type>
   <name>example-bgp-rib</name>
  </rib>
  ...
@@ -343,7 +343,7 @@ and *peer-role* (if necessary).
  <holdtimer xmlns="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">180</holdtimer>
  <peer-role xmlns="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">ibgp</peer-role>
  <rib xmlns"urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">
-  <type xmlns:x="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:cfg">x:rib</type>
+  <type xmlns:x="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">x:rib-instance</type>
   <name>example-bgp-rib</name>
  </rib>
  <peer-registry xmlns="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">
