Adding VTN Renderer HowTo in User Guide.
Change-Id: Ia4e188e1b767b7a721c6382f3bebebeebf4296dc
Signed-off-by: Arthi.b <arthi.b@hcl.com>

--- a/manuals/user-guide/src/main/asciidoc/nic/nic-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/nic/nic-user.adoc
@@ -92,3 +92,7 @@ console CLI commands are available.
 * intent:show <id> - display the details of a specific intent
 
 * intent:delete <id> - removes an intent from the system
+
+=== NIC Usage Examples
+
+include::NIC_How_To_configure_VTN_Renderer.adoc[How to configure VTN Renderer]
