Fixed BGP User Guide.
Restconf guide for creating application peer pointed to
wrong data-broker.

Change-Id: I93f857a9225f7ca5a4c800e8bb5fbc49adff510f
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>
(cherry picked from commit abfe6deabb2bd45b6e1439527aa0747496670125)

--- a/manuals/user-guide/src/main/asciidoc/bgpcep/odl-bgpcep-bgp-all-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bgpcep/odl-bgpcep-bgp-all-user.adoc
@@ -388,8 +388,8 @@ BGP Best Path Selection algorithm.
   </target-rib>
  <application-rib-id xmlns="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">example-app-rib</application-rib-id>
  <data-broker xmlns="urn:opendaylight:params:xml:ns:yang:controller:bgp:rib:impl">
-  <type xmlns:x="urn:opendaylight:params:xml:ns:yang:controller:md:sal:binding">x:binding-async-data-broker</type>
-  <name>pingpong-binding-data-broker</name>
+  <type xmlns:x="urn:opendaylight:params:xml:ns:yang:controller:md:sal:dom">x:dom-async-data-broker</type>
+  <name>pingpong-broker</name>
  </data-broker>
 </module>
 ----
